# My3DEngine

./: .gitignore  CMakeLists.txt  My3DEngine.vcxproj  My3DEngine.vcxproj.filters  README.md  build_x64.bat  vcpkg.json
Code/: Application.cpp  Application.h  GLFWWindowProwider.cpp  GLFWWindowProwider.h  IWindowProwider.cpp  IWindowProwider.h  Matrix4x4.cpp  Matrix4x4.h  Mesh.cpp  Mesh.h  Object3D.cpp  Object3D.h  ObjectSpace.h  RenderingPipeline.h  SFMLWindowProwider.cpp  SFMLWindowProwider.h  Scene.cpp  Scene.h  SceneLight.cpp  Triangle.cpp  Triangle.h  Vector3f.cpp  Vector3f.h  WindowSettings.h  main.cpp
x64/Debug/: My3DEngine.exe.recipe
x64/Debug/My3DEngine.tlog/: My3DEngine.lastbuildstate
x64/Release/: My3DEngine.exe.recipe
x64/Release/My3DEngine.tlog/: My3DEngine.lastbuildstate
